# blog-benchmarks

basic/: pom.xml
basic/src/main/java/com/gotofinal/blog/benchmark/part1/: ModuleVsAnd.java  PrimitiveVsObjects.java  RandomTest.java
basic/src/main/java/com/gotofinal/blog/benchmark/part2/: ForLoop.java  LambdasVsClasses.java  StreamBenchmark.java  StreamBenchmark2.java
basic/src/main/java/com/gotofinal/blog/benchmark/part3/: ReflectionBenchmark.java
basic/src/main/java/com/gotofinal/blog/benchmark/part3/test/: Something.java
basic/src/main/java/com/gotofinal/blog/tricks/: MyAgent.java  ReflectiveAccessModules.java  ReflectiveAccessModulesInstrumentation.java  ReflectiveAccessModulesNative.java
basic/src/main/resources/cppcode/: CMakeLists.txt  com_gotofinal_blog_tricks_ReflectiveAccessModulesNative.cpp  com_gotofinal_blog_tricks_ReflectiveAccessModulesNative.h
java8/: pom.xml
java8/src/main/java/com/gotofinal/blog/tricks/: InterfaceTypeChecking.java
parent/: pom.xml
